2021-03-28 [1.42 Bld 200]

- Addition    : Add NS32K custom processor instructions
- Addition    : Add NS32K floating point register names Lx
- Bugfix      : repair -D <var>=<value> option

2021-03-19 [1.42 Bld 199]

- Bugfix      : Correct address of NS32082 BPR1 register 
- Bugfix      : Correct operand size handling of NS32xxx MOVLF/MOVFL
- Bugfix      : Correct operand size of NS32xxx shift/rotate instructions
- Addition    : Allow addr(pc) as syntax for NS32xxx PC-relative addressing
- Addition    : Allow disp2(disp1(ext)) as syntax variant for NS32xxx
                external mode

2021-03-17 [1.42 Bld 198]

- Bugfix      : Some cleanups regarding Z180 I/O instructions
- Addition    : PMMU instruction on NS32000 allows differentiation
                of MMU variants
- Bugfix      : NS32000: Correct addressing modes of INDEXi and CVTP
- Bugfix      : NS32000: Correct EXT addressing mode

2021-03-14 [1.42 Bld 197]

- Addition    : Support NS32000 as target

2021-03-02 [1.42 Bld 196]

- Bugfix      : Correct ADDQ/SUBQ range checking for 68K

2021-02-18 [1.42 Bld 195]

- Bugfix      : Avoid identifying 0B....H as C-style binary in relaxed mode
- Bugfix      : correct indexed addressing mode with short base for Z8000

2021-02-15 [1.42 Bld 194]

- Bugfix      : fix SAVE/RESTORE instructions
- Addition    : add J... variable branch instructions for 180x

2021-02-13 [1.42 Bld 193]

- Addition    : add more flexible integer format configuration
- Addition    : add PORT statement for 8008
- Addition    : add Z80SYNTAX for 8008

2021-01-30 [1.42 Bld 192]

- Addition    : Initial support for Padauk controllers
- Bugfix      : fix ST6 ASCII/ASCIZ instructions

2021-01-21 [1.42 Bld 191]

- Addition    : SC/MP: allow writing registers as 0..3 instead of P0..P3
- Addition    : SC/MP: add x'... notation option for integer literals
- Bugfix      : correct NoICE debug output
- Bugfix      : corect cross reference list output

2021-01-18 [1.42 Bld 190]
