@@ -1,5 +1,6 @@
 include $(TARG_OBJDIR)codeobjs.dep
 include $(TARG_OBJDIR)codez8000.dep
+include $(TARG_OBJDIR)codens32k.dep
 include $(TARG_OBJDIR)asmobjs.dep
 include $(TARG_OBJDIR)asobjs.dep
 include $(TARG_OBJDIR)dasmobjs.dep
