@@ -1,3 +1,9 @@
+2021-04-17 [1.42 Bld 201]
+
+- Bugfix      : fix MSP430X MOVA instruction with 0(Rn) or @Rn as destination
+- Change      : Logic to update label's value in case of implicit padding gets
+                reset by less pseudo instructions
+
 2021-03-28 [1.42 Bld 200]
 
 - Addition    : Add NS32K custom processor instructions
